[package]
name = "web-embedded-hal"
version = "0.1.0"
edition = "2018"
description = "Web embedded-hal components"
documentation = "https://docs.rs/web-embedded-hal"
readme = "README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/web-embedded-hal"
license = "Apache-2.0"
keywords = ["embedded", "async", "no_std", "web"]
exclude = [".github"]

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3.4", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window'] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.8" }
embedded-hal-async = { version = "0.1.0-alpha.1" }
critical-section = "0.2.7"
futures = "0.3"
